--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -29,7 +29,7 @@ body {
 
 .btn {
     background-color: #007bff;
-    color: #fff;
+    color: #3f3c3c;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
