--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #4a4444
 }
 
 .container {
@@ -9,7 +10,7 @@ body {
 }
 
 .container p {
-    text-align: center;
+    text-align: center
 }
 
 .input-group {
@@ -29,7 +30,7 @@ body {
 
 .btn {
     background-color: #007bff;
-    color: #3f3c3c;
+    color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
