--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,11 +1,15 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffffff
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+
 }
 
 .container {
     max-width: 400px;
-    margin: 0 auto;
 }
 
 
