--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Calibri, sans-serif;
+    font-family: Arial, sans-serif;
     background-color: #ffffff;
     display: flex;
     justify-content: center;
@@ -29,7 +29,7 @@ body {
 }
 
 .btn {
-    background-color: #00ffa2;
+    background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
     border: none;
