--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,20 +5,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +13,39 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.topDisplay{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color:aliceblue;
+  align-items: center;
+  background-color: black;
+  width: 100%;
+  text-align: center;
+  margin-top: -7%;
+  margin-bottom: -7%;
+
+}
+
+.nav {
+  display: flex;
+}
+
+.navButton {
+  width: 40%;
+  height: 100px;
+  background-color: darkslateblue;
+}
+
+.navIcon {
+  height: 50px;
+  width: 50px;
+}
+
+.content ul {
+  height: 580px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
