--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -1,15 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-
-}
+/* code written by Le Duong, unless stated otherwise */
 
 .container {
-    max-width: 400px;
+    text-align: center;
+    align-items: center;
+    max-width: 300%;
+    width: 100%;
+    /* Le Duong */
+    /* highlights login form area on webpage ,will be removed later */
+    background-color: #808080;
 }
 
 
@@ -18,6 +16,8 @@ body {
     text-align: center;
 }
 
+/* Le Duong */
+/* formats all input fields on login form */
 .input-group input {
     width: 100%;
     padding: 10px;
@@ -28,6 +28,8 @@ body {
     box-sizing: border-box;
 }
 
+/* Le Duong */
+/* formats all buttons on login form */
 .btn {
     background-color: #007bff;
     color: #fff;
